--- a/package.json
+++ b/package.json
@@ -6,22 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "connect": "pscale connect petkage-database development --org petkage",
+    "db:push": "npx prisma db push",
+    "studio": "npx prisma studio"
   },
   "dependencies": {
+    "@prisma/client": "^4.7.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "bcrypt": "^5.1.0",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
+    "iron-session": "^6.3.1",
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
+    "prettier-plugin-prisma": "^4.4.0",
+    "prisma": "^4.7.1",
     "tailwindcss": "^3.2.4"
   }
 }
