--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
     "iron-session": "^6.3.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "prettier-plugin-prisma": "^4.4.0",
